Replace pixel VoxelShape magic with continuous arcane meshes