@@ -5,34 +5,48 @@ import kr.moonseungjun.arcanecircle.magic.SpellCatalog;
 import kr.moonseungjun.arcanecircle.magic.SpellDefinition;
 import kr.moonseungjun.arcanecircle.network.WorldMagicPayload;
 import net.minecraft.client.Minecraft;
-import net.minecraft.client.renderer.rendertype.RenderTypes;
 import net.minecraft.resources.Identifier;
 import net.minecraft.util.context.ContextKey;
-import net.minecraft.world.phys.AABB;
 import net.minecraft.world.phys.Vec3;
-import net.minecraft.world.phys.shapes.Shapes;
-import net.minecraft.world.phys.shapes.VoxelShape;
 import net.neoforged.neoforge.client.event.ExtractLevelRenderStateEvent;
 import net.neoforged.neoforge.client.event.SubmitCustomGeometryEvent;
 
-import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 import java.util.UUID;
+import java.util.ArrayList;
 
+/**
+ * Multiplayer-synchronised world-space magic renderer.
+ *
+ * <p>Alpha.8 deliberately stops using VoxelShape/AABB point clouds. Circles, runes and spell
+ * bodies are now continuous line meshes. The renderer remains particle-free and keeps hard
+ * segment/visual budgets so high-circle rituals cannot freeze the render thread.</p>
+ */
 public final class WorldMagicTracker {
     private static final ContextKey<List<RenderEntry>> DATA_KEY = new ContextKey<>(
-            Identifier.fromNamespaceAndPath(ArcaneCircle.MOD_ID, "world_magic_geometry"));
+            Identifier.fromNamespaceAndPath(ArcaneCircle.MOD_ID, "world_magic_mesh"));
     private static final Map<UUID, Visual> CHARGES = new HashMap<>();
     private static final List<Visual> RELEASES = new ArrayList<>();
 
-    private static final int MAX_CHARGE_PRIMITIVES = 320;
-    private static final int MAX_RELEASE_PRIMITIVES = 512;
-    private static final int MAX_RELEASE_VISUALS = 24;
-    private static final int MAX_FRAME_PRIMITIVES = 1024;
-    private static final double MAX_RENDER_DISTANCE_SQR = 128.0 * 128.0;
+    private static final int MAX_CHARGE_SEGMENTS = 460;
+    private static final int MAX_RELEASE_SEGMENTS = 820;
+    private static final int MAX_RELEASE_VISUALS = 18;
+    private static final int MAX_FRAME_SEGMENTS = 1900;
+    private static final double MAX_RENDER_DISTANCE_SQR = 160.0 * 160.0;
     private static final long CHARGE_TTL_NS = 650_000_000L;
+
+    private static final Set<String> BEAMS = Set.of(
+            "ray_of_frost", "scorching_ray", "lightning_bolt", "disintegrate", "sunbeam",
+            "chain_lightning", "prismatic_spray", "void_lance");
+    private static final Set<String> PROJECTILES = Set.of(
+            "magic_missile", "fire_bolt", "fireball", "ice_knife", "chromatic_orb",
+            "delayed_blast_fireball", "freezing_sphere", "arcane_hand", "phoenix_requiem");
+    private static final Set<String> WAVES = Set.of(
+            "thunderwave", "gust_of_wind", "burning_hands", "cone_of_cold", "shatter",
+            "steam_burst", "world_sunder");
 
     private WorldMagicTracker() {}
 
@@ -68,37 +82,35 @@ public final class WorldMagicTracker {
         direction = direction.normalize();
 
         double range = Math.max(0.1, decimal(values, "range", spell.range()));
-        double power = Math.max(0.1, decimal(values, "power", spell.power()));
+        double power = Math.max(0.1, decimal(values, "power", Math.max(0.1, spell.power())));
         double progress = clamp(decimal(values, "progress", 1.0), 0.0, 1.0);
         int duration = Math.max(2, integer(values, "duration", 10));
         long now = System.nanoTime();
 
         if ("charge".equals(kind)) {
-            int progressStep = Math.max(0, Math.min(20, (int) Math.floor(progress * 20.0 + 0.0001)));
+            int progressStep = Math.max(0, Math.min(24, (int) Math.floor(progress * 24.0 + 0.0001)));
             GeometryKey key = GeometryKey.charge(spell.id(), fusion, ingredients, progressStep, direction, range);
             Visual previous = CHARGES.get(caster);
-            List<VoxelShape> geometry;
+            ArcaneWorldMesh mesh;
             if (previous != null && key.equals(previous.key)) {
-                geometry = previous.geometry;
+                mesh = previous.mesh;
             } else {
-                double quantizedProgress = progressStep / 20.0;
-                geometry = buildCharge(spell, fusion, ingredients, direction, quantizedProgress, range);
+                mesh = buildCharge(spell, fusion, ingredients, direction, progressStep / 24.0, range);
             }
-            CHARGES.put(caster, new Visual(
-                    caster, center, geometry, color(spell), now + CHARGE_TTL_NS, key));
+            CHARGES.put(caster, new Visual(caster, center, mesh, color(spell), now + CHARGE_TTL_NS, key));
             return;
         }
 
         if ("release".equals(kind)) {
-            List<VoxelShape> geometry = buildRelease(spell, fusion, ingredients, direction, range, power);
-            while (RELEASES.size() >= MAX_RELEASE_VISUALS) RELEASES.remove(0);
+            ArcaneWorldMesh mesh = buildRelease(spell, fusion, ingredients, direction, range, power);
+            while (RELEASES.size() >= MAX_RELEASE_VISUALS) RELEASES.removeFirst();
             RELEASES.add(new Visual(
                     caster,
                     center,
-                    geometry,
+                    mesh,
                     color(spell),
                     now + duration * 50_000_000L,
-                    GeometryKey.release(spell.id(), direction, range)));
+                    GeometryKey.release(spell.id(), fusion, ingredients, direction, range, power)));
             CHARGES.remove(caster);
         }
     }
@@ -122,405 +134,406 @@ public final class WorldMagicTracker {
         Vec3 camera = event.getLevelRenderState().cameraRenderState.pos;
         float baseWidth = Minecraft.getInstance().gameRenderer.gameRenderState()
                 .windowRenderState.appropriateLineWidth;
-        float lineWidth = Math.max(0.85F, baseWidth * 0.90F);
+        float windowScale = Math.max(0.72F, baseWidth * 0.82F);
         int submitted = 0;
 
         for (RenderEntry entry : entries) {
+            if (submitted >= MAX_FRAME_SEGMENTS) break;
             Vec3 offset = entry.center.subtract(camera);
             if (offset.lengthSqr() > MAX_RENDER_DISTANCE_SQR) continue;
 
             event.getPoseStack().pushPose();
             event.getPoseStack().translate(offset.x, offset.y, offset.z);
-            for (VoxelShape primitive : entry.geometry) {
-                if (submitted >= MAX_FRAME_PRIMITIVES) break;
-                event.getSubmitNodeCollector().submitShapeOutline(
-                        event.getPoseStack(),
-                        primitive,
-                        RenderTypes.lines(),
-                        entry.argb,
-                        lineWidth,
-                        false);
-                submitted++;
-            }
+            entry.mesh.submit(event.getPoseStack(), event.getSubmitNodeCollector(), entry.argb, windowScale);
             event.getPoseStack().popPose();
-            if (submitted >= MAX_FRAME_PRIMITIVES) break;
+            submitted += entry.mesh.size();
         }
     }
 
-    private static List<VoxelShape> buildCharge(
+    private static ArcaneWorldMesh buildCharge(
             SpellDefinition spell,
             boolean fusion,
             int ingredients,
             Vec3 normal,
             double progress,
             double range) {
-        List<VoxelShape> shapes = new ArrayList<>(Math.min(MAX_CHARGE_PRIMITIVES, 128));
-        Basis basis = basis(spell, normal);
-        double outer = 0.42
-                + spell.circle() * 0.095
-                + Math.min(0.32, range * 0.008)
-                + (fusion ? 0.18 : 0.0);
-        int ringPoints = 16 + spell.circle();
+        ArcaneWorldMesh.Builder mesh = ArcaneWorldMesh.builder(MAX_CHARGE_SEGMENTS);
+        appendCharge(mesh, spell, fusion, ingredients, normal, progress, range);
+        return mesh.build();
+    }
 
-        // The primary concentric count remains exact: 1C=1 ring ... 9C=9 rings.
-        for (int ring = 0; ring < spell.circle(); ring++) {
-            double radius = outer * (1.0 - ring * 0.66 / Math.max(1.0, spell.circle()));
-            double localProgress = clamp(progress * spell.circle() - ring, 0.0, 1.0);
-            addPartialCircle(
-                    shapes, basis, Vec3.ZERO, radius, ringPoints, localProgress, 0.013,
-                    MAX_CHARGE_PRIMITIVES);
+    private static void appendCharge(
+            ArcaneWorldMesh.Builder mesh,
+            SpellDefinition spell,
+            boolean fusion,
+            int ingredients,
+            Vec3 normal,
+            double progress,
+            double range) {
+        ArcaneWorldMesh.Basis basis = basis(spell, normal);
+        int circle = Math.max(1, Math.min(9, spell.circle()));
+        double scale = rangeScale(spell, range);
+        double outer = (0.46 + circle * 0.115 + circle * circle * 0.0125) * scale
+                + (fusion ? 0.24 * scale : 0.0);
+        float coreWidth = (float) (0.70 + circle * 0.055);
+        double rotation = Math.floorMod(spell.id().hashCode(), 360) * Math.PI / 180.0;
+
+        // Lore rule remains exact: a completed n-circle spell has exactly n primary rings.
+        for (int ring = 0; ring < circle && !mesh.full(); ring++) {
+            double radius = outer * (1.0 - ring * 0.62 / Math.max(1.0, circle));
+            double local = clamp(progress * circle - ring, 0.0, 1.0);
+            if (local <= 0.0) continue;
+            int segments = 36 + circle * 5 + ring * 2;
+            mesh.arc(basis, Vec3.ZERO, radius, -Math.PI / 2.0 + rotation * 0.08,
+                    Math.PI * 2.0 * local, Math.max(3, (int) Math.ceil(segments * local)),
+                    coreWidth * (ring == 0 ? 1.08F : 0.82F));
         }
 
-        if (progress >= 0.16) {
-            int sides = 3 + Math.floorMod(spell.id().hashCode(), 6);
-            addPolygon(
-                    shapes,
-                    basis,
-                    Vec3.ZERO,
-                    outer * 0.56,
-                    sides,
-                    clamp((progress - 0.16) / 0.46, 0.0, 1.0),
-                    0.017,
-                    MAX_CHARGE_PRIMITIVES);
+        if (progress >= 0.13) {
+            double p = clamp((progress - 0.13) / 0.37, 0.0, 1.0);
+            appendSchoolSeal(mesh, spell, basis, outer, rotation, p, coreWidth);
         }
 
-        if (progress >= 0.36) {
-            int spokes = Math.min(11, 3 + spell.circle() + Math.floorMod(spell.id().hashCode(), 3));
-            int shown = (int) Math.floor(spokes * Math.min(1.0, (progress - 0.36) / 0.42));
-            for (int i = 0; i < shown; i++) {
-                double angle = Math.PI * 2.0 * i / spokes;
-                addSegment(
-                        shapes,
-                        basis.point(angle, outer * 0.28),
-                        basis.point(angle, outer * 0.92),
-                        5,
-                        0.015,
-                        MAX_CHARGE_PRIMITIVES);
+        if (progress >= 0.38) {
+            double p = clamp((progress - 0.38) / 0.34, 0.0, 1.0);
+            int runes = Math.min(14, 4 + circle + Math.floorMod(spell.id().hashCode(), 3));
+            int visible = Math.max(1, (int) Math.floor(runes * p));
+            for (int i = 0; i < visible && !mesh.full(); i++) {
+                double angle = rotation + Math.PI * 2.0 * i / runes;
+                double inner = outer * (0.60 + (i % 2) * 0.06);
+                double outerPoint = outer * (0.88 + (i % 3) * 0.025);
+                Vec3 a = basis.point(angle, inner);
+                Vec3 b = basis.point(angle + ((i & 1) == 0 ? 0.09 : -0.09), outerPoint);
+                mesh.line(a, b, coreWidth * 0.72F);
+                if (circle >= 4) {
+                    Vec3 c = basis.point(angle + 0.15, outerPoint * 0.96);
+                    mesh.line(b, c, coreWidth * 0.56F);
+                }
             }
         }
 
-        if (spell.circle() >= 3 && progress >= 0.60) {
-            int satellites = Math.min(5, spell.circle() - 1);
-            for (int i = 0; i < satellites; i++) {
-                double angle = Math.PI * 2.0 * i / satellites;
-                Vec3 satelliteCenter = basis.point(angle, outer * 1.22);
-                addCircle(
-                        shapes,
-                        basis,
-                        satelliteCenter,
-                        outer * 0.16,
-                        14 + spell.circle(),
-                        0.014,
-                        MAX_CHARGE_PRIMITIVES);
-                addSegment(
-                        shapes,
-                        basis.point(angle, outer),
-                        satelliteCenter,
-                        4,
-                        0.014,
-                        MAX_CHARGE_PRIMITIVES);
+        if (circle >= 3 && progress >= 0.55) {
+            int satellites = Math.min(7, 2 + circle / 2);
+            int visible = Math.max(1, (int) Math.floor(satellites * clamp((progress - 0.55) / 0.30, 0, 1)));
+            for (int i = 0; i < visible && !mesh.full(); i++) {
+                double angle = rotation + Math.PI * 2.0 * i / satellites;
+                Vec3 center = basis.point(angle, outer * 1.22);
+                double satelliteRadius = outer * (0.095 + circle * 0.006);
+                mesh.circle(basis, center, satelliteRadius, 24 + circle * 2, coreWidth * 0.68F);
+                mesh.polygon(basis, center, satelliteRadius * 0.66,
+                        3 + Math.floorMod(i + circle, 4), rotation * 0.5, coreWidth * 0.50F);
+                mesh.line(basis.point(angle, outer * 0.93),
+                        center.add(basis.point(angle + Math.PI / 2.0, satelliteRadius * 0.18)),
+                        coreWidth * 0.50F);
             }
+        }
+
+        // High-circle circles are not just larger: they gain independent tilted orbital layers.
+        if (circle >= 6 && progress >= 0.66) {
+            int orbits = circle - 5;
+            int visible = Math.max(1, (int) Math.floor(orbits * clamp((progress - 0.66) / 0.30, 0, 1)));
+            Vec3 facing = basis.normal();
+            for (int i = 0; i < visible && !mesh.full(); i++) {
+                double tilt = 0.28 + i * 0.19;
+                Vec3 orbitNormal = facing.add(basis.right().scale(Math.sin(tilt) * 0.62))
+                        .add(basis.up().scale(Math.cos(tilt) * 0.42)).normalize();
+                ArcaneWorldMesh.Basis orbit = ArcaneWorldMesh.Basis.fromNormal(orbitNormal, basis.right());
+                mesh.circle(orbit, Vec3.ZERO, outer * (1.04 + i * 0.10),
+                        54 + circle * 5, coreWidth * 0.62F);
+            }
+            mesh.runeChords(basis, Vec3.ZERO, outer * 0.48,
+                    7 + circle, 2 + circle % 4, rotation, coreWidth * 0.56F);
         }
 
         if (fusion && ingredients >= 2 && progress >= 0.42) {
-            int visibleIngredients = Math.min(3, ingredients);
-            for (int i = 0; i < visibleIngredients; i++) {
-                double angle = -Math.PI / 2.0 + Math.PI * 2.0 * i / visibleIngredients;
-                Vec3 satelliteCenter = basis.point(angle, outer * 1.48);
-                addCircle(
-                        shapes,
-                        basis,
-                        satelliteCenter,
-                        outer * 0.25,
-                        20,
-                        0.016,
-                        MAX_CHARGE_PRIMITIVES);
-                addPolygon(
-                        shapes,
-                        basis,
-                        satelliteCenter,
-                        outer * 0.17,
-                        3 + i,
-                        1.0,
-                        0.015,
-                        MAX_CHARGE_PRIMITIVES);
-                addSegment(
-                        shapes,
-                        Vec3.ZERO,
-                        satelliteCenter,
-                        6,
-                        0.014,
-                        MAX_CHARGE_PRIMITIVES);
+            int count = Math.min(3, ingredients);
+            for (int i = 0; i < count && !mesh.full(); i++) {
+                double angle = -Math.PI / 2.0 + rotation + Math.PI * 2.0 * i / count;
+                Vec3 center = basis.point(angle, outer * 1.52);
+                double radius = outer * 0.24;
+                mesh.circle(basis, center, radius, 38, coreWidth * 0.88F);
+                mesh.star(basis, center, radius * 0.72, radius * 0.34,
+                        3 + i, rotation * (i + 1), coreWidth * 0.58F);
+                mesh.line(basis.point(angle, outer * 0.74), center, coreWidth * 0.62F);
             }
+            mesh.circle(basis, Vec3.ZERO, outer * 1.78, 68 + circle * 4, coreWidth * 0.50F);
         }
-
-        return List.copyOf(shapes);
     }
 
-    private static List<VoxelShape> buildRelease(
+    private static void appendSchoolSeal(
+            ArcaneWorldMesh.Builder mesh,
+            SpellDefinition spell,
+            ArcaneWorldMesh.Basis basis,
+            double outer,
+            double rotation,
+            double progress,
+            float width) {
+        double radius = outer * 0.54;
+        int visibleSegments = Math.max(3, (int) Math.ceil((28 + spell.circle() * 3) * progress));
+        switch (spell.school()) {
+            case FIRE -> {
+                mesh.star(basis, Vec3.ZERO, radius, radius * 0.42,
+                        3 + spell.circle() / 3, rotation, width * 0.82F);
+                if (progress > 0.55) mesh.polygon(basis, Vec3.ZERO, radius * 0.72,
+                        3, -rotation, width * 0.58F);
+            }
+            case FROST -> {
+                int arms = 6 + (spell.circle() >= 7 ? 2 : 0);
+                for (int i = 0; i < Math.max(1, (int) Math.ceil(arms * progress)); i++) {
+                    double angle = rotation + Math.PI * 2.0 * i / arms;
+                    Vec3 tip = basis.point(angle, radius);
+                    Vec3 root = basis.point(angle, radius * 0.12);
+                    mesh.line(root, tip, width * 0.70F);
+                    Vec3 branch = basis.point(angle, radius * 0.68);
+                    mesh.line(branch, branch.add(basis.point(angle + 2.35, radius * 0.22)), width * 0.46F);
+                    mesh.line(branch, branch.add(basis.point(angle - 2.35, radius * 0.22)), width * 0.46F);
+                }
+            }
+            case WIND -> {
+                int turns = 2 + spell.circle() / 3;
+                List<Vec3> spiral = new ArrayList<>(visibleSegments + 1);
+                for (int i = 0; i <= visibleSegments; i++) {
+                    double t = i / (double) Math.max(1, visibleSegments);
+                    spiral.add(basis.point(rotation + Math.PI * 2.0 * turns * t, radius * t));
+                }
+                mesh.polyline(spiral, width * 0.72F, false);
+            }
+            case WARD -> {
+                mesh.polygon(basis, Vec3.ZERO, radius, 6 + spell.circle() / 4, rotation, width * 0.84F);
+                mesh.runeChords(basis, Vec3.ZERO, radius * 0.78,
+                        6 + spell.circle(), 2, -rotation, width * 0.52F);
+            }
+            case LIFE -> {
+                ArcaneWorldMesh.Basis tiltedA = ArcaneWorldMesh.Basis.fromNormal(
+                        basis.normal().add(basis.right().scale(0.18)), basis.up());
+                ArcaneWorldMesh.Basis tiltedB = ArcaneWorldMesh.Basis.fromNormal(
+                        basis.normal().add(basis.right().scale(-0.18)), basis.up());
+                mesh.circle(tiltedA, basis.right().scale(radius * 0.19), radius * 0.64,
+                        visibleSegments, width * 0.68F);
+                mesh.circle(tiltedB, basis.right().scale(-radius * 0.19), radius * 0.64,
+                        visibleSegments, width * 0.68F);
+                mesh.line(basis.up().scale(-radius), basis.up().scale(radius), width * 0.54F);
+            }
+            case SPACE -> {
+                mesh.circle(basis, basis.right().scale(radius * 0.16), radius * 0.77,
+                        visibleSegments, width * 0.80F);
+                mesh.circle(basis, basis.right().scale(-radius * 0.16), radius * 0.77,
+                        visibleSegments, width * 0.58F);
+                mesh.runeChords(basis, Vec3.ZERO, radius * 0.58,
+                        7 + spell.circle(), 3, rotation, width * 0.48F);
+            }
+            default -> {
+                mesh.polygon(basis, Vec3.ZERO, radius, 4 + spell.circle() / 2,
+                        rotation, width * 0.76F);
+                mesh.runeChords(basis, Vec3.ZERO, radius * 0.72,
+                        7 + spell.circle(), 2 + spell.circle() % 3,
+                        -rotation, width * 0.52F);
+            }
+        }
+    }
+
+    private static ArcaneWorldMesh buildRelease(
             SpellDefinition spell,
             boolean fusion,
             int ingredients,
             Vec3 direction,
             double range,
             double power) {
-        List<VoxelShape> shapes = new ArrayList<>(MAX_RELEASE_PRIMITIVES);
-        append(shapes, buildCharge(spell, fusion, ingredients, direction, 1.0, range), MAX_RELEASE_PRIMITIVES);
-        Basis basis = basis(spell, direction);
+        ArcaneWorldMesh.Builder mesh = ArcaneWorldMesh.builder(MAX_RELEASE_SEGMENTS);
+        appendCharge(mesh, spell, fusion, ingredients, direction, 1.0, range);
+        ArcaneWorldMesh.Basis facing = ArcaneWorldMesh.Basis.facing(direction);
+        int circle = Math.max(1, Math.min(9, spell.circle()));
+        double rangeFactor = rangeScale(spell, range);
+        double powerFactor = powerScale(spell, power);
+        float width = (float) (0.82 + circle * 0.075 + powerFactor * 0.12);
 
-        switch (spell.sigilAnchor()) {
-            case FRONT -> {
-                double length = Math.min(34.0, Math.max(3.0, range));
-                Vec3 end = direction.scale(length);
-                addSegment(
-                        shapes,
-                        Vec3.ZERO,
-                        end,
-                        Math.min(40, Math.max(12, (int) Math.ceil(length * 1.5))),
-                        0.030 + spell.circle() * 0.004,
-                        MAX_RELEASE_PRIMITIVES);
-                if (spell.circle() >= 4) {
-                    Vec3 side = basis.right.scale(0.14 + spell.circle() * 0.025);
-                    addSegment(shapes, side, end.add(side), 20, 0.021, MAX_RELEASE_PRIMITIVES);
-                    addSegment(
-                            shapes,
-                            side.scale(-1),
-                            end.add(side.scale(-1)),
-                            20,
-                            0.021,
-                            MAX_RELEASE_PRIMITIVES);
-                }
-                addSphereLattice(
-                        shapes,
-                        end,
-                        0.28 + spell.circle() * 0.09,
-                        spell.circle(),
-                        MAX_RELEASE_PRIMITIVES);
-            }
-            case FEET, GROUND_SELF, GROUND_TARGET -> {
-                Basis ground = Basis.ground();
-                double radius = Math.min(17.0, Math.max(1.8, range * 0.24 + spell.circle() * 0.42));
-                int rings = Math.max(2, Math.min(9, spell.circle()));
-                for (int i = 1; i <= rings; i++) {
-                    addCircle(
-                            shapes,
-                            ground,
-                            Vec3.ZERO,
-                            radius * i / rings,
-                            20 + Math.min(12, i * 2),
-                            0.023,
-                            MAX_RELEASE_PRIMITIVES);
-                }
-                int pillars = Math.min(10, 4 + spell.circle());
-                for (int i = 0; i < pillars; i++) {
-                    double angle = Math.PI * 2.0 * i / pillars;
-                    Vec3 base = ground.point(angle, radius * 0.82);
-                    addSegment(
-                            shapes,
-                            base,
-                            base.add(0, 1.2 + spell.circle() * 0.32, 0),
-                            8,
-                            0.027,
-                            MAX_RELEASE_PRIMITIVES);
-                }
-            }
-            case BODY -> addSphereLattice(
-                    shapes,
-                    new Vec3(0, -0.75, 0),
-                    1.15 + spell.circle() * 0.22,
-                    spell.circle() + 2,
-                    MAX_RELEASE_PRIMITIVES);
-            case TARGET -> {
-                double radius = 0.75 + spell.circle() * 0.15;
-                Basis ground = Basis.ground();
-                int levels = Math.min(6, 3 + spell.circle() / 2);
-                for (int level = 0; level < levels; level++) {
-                    Vec3 offset = new Vec3(0, -0.8 + level * 0.48, 0);
-                    addCircle(
-                            shapes,
-                            ground,
-                            offset,
-                            radius,
-                            24,
-                            0.022,
-                            MAX_RELEASE_PRIMITIVES);
-                }
-                int bars = Math.min(12, 5 + spell.circle());
-                for (int i = 0; i < bars; i++) {
-                    double angle = Math.PI * 2.0 * i / bars;
-                    Vec3 low = ground.point(angle, radius).add(0, -0.8, 0);
-                    addSegment(
-                            shapes,
-                            low,
-                            low.add(0, 1.9 + spell.circle() * 0.08, 0),
-                            9,
-                            0.024,
-                            MAX_RELEASE_PRIMITIVES);
-                }
+        if (BEAMS.contains(spell.id())) {
+            appendBeam(mesh, spell, direction, facing, range, rangeFactor, powerFactor, width);
+        } else if (PROJECTILES.contains(spell.id())) {
+            appendProjectile(mesh, spell, direction, facing, range, rangeFactor, powerFactor, width);
+        } else if (WAVES.contains(spell.id())) {
+            appendWave(mesh, spell, direction, facing, range, rangeFactor, powerFactor, width);
+        } else {
+            switch (spell.sigilAnchor()) {
+                case FRONT -> appendProjectile(mesh, spell, direction, facing, range,
+                        rangeFactor, powerFactor, width);
+                case FEET, GROUND_SELF, GROUND_TARGET -> appendGroundField(mesh, spell,
+                        range, rangeFactor, powerFactor, width);
+                case BODY -> appendBodyAura(mesh, spell, rangeFactor, powerFactor, width);
+                case TARGET -> appendTargetSeal(mesh, spell, rangeFactor, powerFactor, width);
             }
         }
 
-        if (spell.school() == SpellDefinition.School.SPACE) {
-            Basis portal = basis(spell, direction);
-            double portalRadius = 0.9 + spell.circle() * 0.16;
-            addCircle(
-                    shapes,
-                    portal,
-                    Vec3.ZERO,
-                    portalRadius,
-                    36,
-                    0.024,
-                    MAX_RELEASE_PRIMITIVES);
-            addCircle(
-                    shapes,
-                    portal,
-                    direction.scale(0.28),
-                    portalRadius * 0.82,
-                    32,
-                    0.022,
-                    MAX_RELEASE_PRIMITIVES);
-        }
-
-        SignatureGeometry.append(spell, direction, range, shapes, MAX_RELEASE_PRIMITIVES);
-        return List.copyOf(shapes);
+        SignatureGeometry.append(spell, direction, range, power, mesh);
+        return mesh.build();
     }
 
-    private static Basis basis(SpellDefinition spell, Vec3 normal) {
+    private static void appendBeam(
+            ArcaneWorldMesh.Builder mesh,
+            SpellDefinition spell,
+            Vec3 direction,
+            ArcaneWorldMesh.Basis facing,
+            double range,
+            double rangeFactor,
+            double powerFactor,
+            float width) {
+        double length = Math.min(72.0, Math.max(4.0, range));
+        int strands = Math.min(7, 1 + spell.circle() / 2);
+        for (int i = 0; i < strands && !mesh.full(); i++) {
+            double phase = Math.PI * 2.0 * i / strands;
+            double offset = (0.035 + spell.circle() * 0.008) * powerFactor;
+            Vec3 side = facing.point(phase, offset);
+            mesh.line(side, direction.scale(length).add(side), width * (i == 0 ? 1.0F : 0.62F));
+        }
+        double impact = (0.34 + spell.circle() * 0.10) * rangeFactor * powerFactor;
+        Vec3 end = direction.scale(length);
+        mesh.sphere(end, impact, spell.circle(), width * 0.62F);
+        mesh.circle(facing, end, impact * 1.45, 36 + spell.circle() * 4, width * 0.48F);
+    }
+
+    private static void appendProjectile(
+            ArcaneWorldMesh.Builder mesh,
+            SpellDefinition spell,
+            Vec3 direction,
+            ArcaneWorldMesh.Basis facing,
+            double range,
+            double rangeFactor,
+            double powerFactor,
+            float width) {
+        double length = Math.min(58.0, Math.max(3.2, range));
+        double trailRadius = (0.10 + spell.circle() * 0.018) * powerFactor;
+        int turns = 2 + spell.circle() / 2;
+        int segments = 34 + spell.circle() * 7;
+        mesh.helix(Vec3.ZERO, direction, facing, length, trailRadius,
+                turns, segments, width * 0.58F, true);
+        if (spell.circle() >= 3) {
+            mesh.helix(Vec3.ZERO, direction, facing, length, trailRadius,
+                    -turns, segments, width * 0.42F, true);
+        }
+        Vec3 end = direction.scale(length);
+        double core = (0.20 + spell.circle() * 0.075) * rangeFactor * powerFactor;
+        mesh.sphere(end, core, spell.circle(), width * 0.74F);
+        mesh.star(facing, end, core * 1.46, core * 0.58,
+                Math.min(9, 4 + spell.circle() / 2), 0.0, width * 0.52F);
+    }
+
+    private static void appendWave(
+            ArcaneWorldMesh.Builder mesh,
+            SpellDefinition spell,
+            Vec3 direction,
+            ArcaneWorldMesh.Basis facing,
+            double range,
+            double rangeFactor,
+            double powerFactor,
+            float width) {
+        double length = Math.min(36.0, Math.max(4.5, range * 0.78));
+        double endRadius = (1.15 + spell.circle() * 0.38) * rangeFactor * powerFactor;
+        mesh.cone(Vec3.ZERO, direction, facing, length, endRadius,
+                5 + spell.circle(), 3 + spell.circle() / 2, width * 0.58F);
+        for (int i = 1; i <= Math.min(5, 1 + spell.circle() / 2); i++) {
+            double t = i / (double) Math.min(5, 1 + spell.circle() / 2);
+            mesh.circle(facing, direction.scale(length * t), endRadius * t,
+                    28 + spell.circle() * 4, width * (float) (0.72 - t * 0.18));
+        }
+    }
+
+    private static void appendGroundField(
+            ArcaneWorldMesh.Builder mesh,
+            SpellDefinition spell,
+            double range,
+            double rangeFactor,
+            double powerFactor,
+            float width) {
+        ArcaneWorldMesh.Basis ground = ArcaneWorldMesh.Basis.ground();
+        double radius = Math.min(32.0,
+                Math.max(1.8, (range * 0.24 + spell.circle() * 0.52) * rangeFactor));
+        int rings = Math.max(2, Math.min(9, spell.circle()));
+        for (int i = 1; i <= rings && !mesh.full(); i++) {
+            mesh.circle(ground, Vec3.ZERO, radius * i / rings,
+                    44 + i * 4, width * (i == rings ? 0.82F : 0.46F));
+        }
+        appendSchoolSeal(mesh, spell, ground, radius * 0.88,
+                Math.floorMod(spell.id().hashCode(), 360) * Math.PI / 180.0,
+                1.0, width * 0.68F);
+        int pillars = Math.min(12, 4 + spell.circle());
+        for (int i = 0; i < pillars && !mesh.full(); i++) {
+            double angle = Math.PI * 2.0 * i / pillars;
+            Vec3 base = ground.point(angle, radius * 0.82);
+            mesh.helix(base, new Vec3(0, 1, 0),
+                    ArcaneWorldMesh.Basis.facing(new Vec3(0, 1, 0)),
+                    (1.1 + spell.circle() * 0.38) * powerFactor,
+                    0.08 + spell.circle() * 0.012, 2 + spell.circle() / 3,
+                    20 + spell.circle() * 3, width * 0.38F, true);
+        }
+    }
+
+    private static void appendBodyAura(
+            ArcaneWorldMesh.Builder mesh,
+            SpellDefinition spell,
+            double rangeFactor,
+            double powerFactor,
+            float width) {
+        double radius = (1.05 + spell.circle() * 0.24) * rangeFactor * powerFactor;
+        mesh.sphere(new Vec3(0, -0.72, 0), radius, spell.circle() + 2, width * 0.58F);
+        if (spell.circle() >= 5) {
+            mesh.circle(ArcaneWorldMesh.Basis.ground(), new Vec3(0, -0.72, 0),
+                    radius * 1.15, 58 + spell.circle() * 4, width * 0.42F);
+        }
+    }
+
+    private static void appendTargetSeal(
+            ArcaneWorldMesh.Builder mesh,
+            SpellDefinition spell,
+            double rangeFactor,
+            double powerFactor,
+            float width) {
+        ArcaneWorldMesh.Basis ground = ArcaneWorldMesh.Basis.ground();
+        double radius = (0.72 + spell.circle() * 0.18) * rangeFactor * powerFactor;
+        double bottom = -0.92;
+        double top = 1.45 + spell.circle() * 0.16;
+        int layers = Math.min(8, 3 + spell.circle() / 2);
+        for (int level = 0; level < layers && !mesh.full(); level++) {
+            double t = level / (double) Math.max(1, layers - 1);
+            mesh.circle(ground, new Vec3(0, bottom + (top - bottom) * t, 0),
+                    radius * (0.92 + 0.08 * Math.sin(Math.PI * t)),
+                    42 + spell.circle() * 3, width * 0.52F);
+        }
+        int bars = Math.min(16, 6 + spell.circle());
+        for (int i = 0; i < bars && !mesh.full(); i++) {
+            double angle = Math.PI * 2.0 * i / bars;
+            mesh.line(ground.point(angle, radius).add(0, bottom, 0),
+                    ground.point(angle + 0.08 * Math.sin(i), radius).add(0, top, 0),
+                    width * 0.66F);
+        }
+    }
+
+    private static ArcaneWorldMesh.Basis basis(SpellDefinition spell, Vec3 normal) {
         return switch (spell.sigilAnchor()) {
-            case FEET, GROUND_SELF, GROUND_TARGET -> Basis.ground();
-            default -> Basis.facing(normal);
+            case FEET, GROUND_SELF, GROUND_TARGET -> ArcaneWorldMesh.Basis.ground();
+            default -> ArcaneWorldMesh.Basis.facing(normal);
         };
     }
 
-    private static void addSphereLattice(
-            List<VoxelShape> shapes,
-            Vec3 center,
-            double radius,
-            int detail,
-            int budget) {
-        Basis ground = Basis.ground();
-        addCircle(shapes, ground, center, radius, 28, 0.023, budget);
-        addCircle(
-                shapes,
-                new Basis(new Vec3(1, 0, 0), new Vec3(0, 1, 0)),
-                center,
-                radius,
-                28,
-                0.023,
-                budget);
-        addCircle(
-                shapes,
-                new Basis(new Vec3(0, 0, 1), new Vec3(0, 1, 0)),
-                center,
-                radius,
-                28,
-                0.023,
-                budget);
-        int latitudes = Math.min(3, Math.max(0, detail - 1));
-        for (int i = 1; i <= latitudes; i++) {
-            double y = radius * (-0.55 + i * 1.10 / (latitudes + 1));
-            double r = Math.sqrt(Math.max(0.05, radius * radius - y * y));
-            addCircle(shapes, ground, center.add(0, y, 0), r, 22, 0.019, budget);
-        }
+    private static double rangeScale(SpellDefinition spell, double range) {
+        double base = Math.max(4.0, spell.range());
+        double ratio = Math.max(0.12, range / base);
+        return clamp(Math.pow(ratio, 0.58), 0.78, 3.40);
     }
 
-    private static void addPartialCircle(
-            List<VoxelShape> shapes,
-            Basis basis,
-            Vec3 center,
-            double radius,
-            int points,
-            double progress,
-            double size,
-            int budget) {
-        int shown = Math.max(0, Math.min(points, (int) Math.ceil(points * progress)));
-        for (int i = 0; i < shown && shapes.size() < budget; i++) {
-            double angle = -Math.PI / 2.0 + Math.PI * 2.0 * i / points;
-            addPoint(shapes, center.add(basis.point(angle, radius)), size, budget);
-        }
-    }
-
-    private static void addCircle(
-            List<VoxelShape> shapes,
-            Basis basis,
-            Vec3 center,
-            double radius,
-            int points,
-            double size,
-            int budget) {
-        addPartialCircle(shapes, basis, center, radius, points, 1.0, size, budget);
-    }
-
-    private static void addPolygon(
-            List<VoxelShape> shapes,
-            Basis basis,
-            Vec3 center,
-            double radius,
-            int sides,
-            double progress,
-            double size,
-            int budget) {
-        int shownEdges = Math.max(0, Math.min(sides, (int) Math.ceil(sides * progress)));
-        List<Vec3> vertices = new ArrayList<>(sides);
-        for (int i = 0; i < sides; i++) {
-            double angle = -Math.PI / 2.0 + Math.PI * 2.0 * i / sides;
-            vertices.add(center.add(basis.point(angle, radius)));
-        }
-        for (int i = 0; i < shownEdges && shapes.size() < budget; i++) {
-            addSegment(
-                    shapes,
-                    vertices.get(i),
-                    vertices.get((i + 1) % sides),
-                    6,
-                    size,
-                    budget);
-        }
-    }
-
-    private static void addSegment(
-            List<VoxelShape> shapes,
-            Vec3 start,
-            Vec3 end,
-            int points,
-            double size,
-            int budget) {
-        int safePoints = Math.max(1, points);
-        for (int i = 0; i <= safePoints && shapes.size() < budget; i++) {
-            addPoint(shapes, start.lerp(end, i / (double) safePoints), size, budget);
-        }
-    }
-
-    private static void addPoint(
-            List<VoxelShape> shapes,
-            Vec3 point,
-            double half,
-            int budget) {
-        if (shapes.size() >= budget) return;
-        shapes.add(Shapes.create(new AABB(
-                point.x - half,
-                point.y - half,
-                point.z - half,
-                point.x + half,
-                point.y + half,
-                point.z + half)));
-    }
-
-    private static void append(List<VoxelShape> target, List<VoxelShape> source, int budget) {
-        for (VoxelShape shape : source) {
-            if (target.size() >= budget) return;
-            target.add(shape);
-        }
+    private static double powerScale(SpellDefinition spell, double power) {
+        double base = Math.max(1.0, spell.power());
+        return clamp(Math.pow(Math.max(0.08, power / base), 0.22), 0.82, 2.65);
     }
 
     private static int color(SpellDefinition spell) {
         return switch (spell.school()) {
-            case FIRE -> 0xD8FF7048;
-            case FROST -> 0xD86DE4FF;
-            case WIND -> 0xD876E6BD;
-            case WARD -> 0xD8C595FF;
-            case LIFE -> 0xD873E38E;
-            case SPACE -> 0xD8A382FF;
-            default -> 0xD882A8FF;
+            case FIRE -> 0xE8FF7048;
+            case FROST -> 0xE86DE4FF;
+            case WIND -> 0xE876E6BD;
+            case WARD -> 0xE8C595FF;
+            case LIFE -> 0xE873E38E;
+            case SPACE -> 0xE8A382FF;
+            default -> 0xE882A8FF;
         };
     }
 
@@ -556,16 +569,16 @@ public final class WorldMagicTracker {
     private record Visual(
             UUID caster,
             Vec3 center,
-            List<VoxelShape> geometry,
+            ArcaneWorldMesh mesh,
             int argb,
             long expiresAt,
             GeometryKey key) {
         RenderEntry renderEntry() {
-            return new RenderEntry(center, geometry, argb);
+            return new RenderEntry(center, mesh, argb);
         }
     }
 
-    private record RenderEntry(Vec3 center, List<VoxelShape> geometry, int argb) {}
+    private record RenderEntry(Vec3 center, ArcaneWorldMesh mesh, int argb) {}
 
     private record GeometryKey(
             String spellId,
@@ -576,6 +589,7 @@ public final class WorldMagicTracker {
             int directionY,
             int directionZ,
             int rangeStep,
+            int powerStep,
             boolean release) {
         static GeometryKey charge(
                 String spellId,
@@ -585,50 +599,26 @@ public final class WorldMagicTracker {
                 Vec3 direction,
                 double range) {
             return new GeometryKey(
-                    spellId,
-                    fusion,
-                    ingredients,
-                    progressStep,
-                    quantize(direction.x, 18),
-                    quantize(direction.y, 18),
-                    quantize(direction.z, 18),
-                    quantize(range, 4),
-                    false);
+                    spellId, fusion, ingredients, progressStep,
+                    quantize(direction.x, 24), quantize(direction.y, 24), quantize(direction.z, 24),
+                    quantize(range, 5), 0, false);
         }
 
-        static GeometryKey release(String spellId, Vec3 direction, double range) {
+        static GeometryKey release(
+                String spellId,
+                boolean fusion,
+                int ingredients,
+                Vec3 direction,
+                double range,
+                double power) {
             return new GeometryKey(
-                    spellId,
-                    false,
-                    0,
-                    20,
-                    quantize(direction.x, 18),
-                    quantize(direction.y, 18),
-                    quantize(direction.z, 18),
-                    quantize(range, 4),
-                    true);
+                    spellId, fusion, ingredients, 24,
+                    quantize(direction.x, 24), quantize(direction.y, 24), quantize(direction.z, 24),
+                    quantize(range, 5), quantize(power, 2), true);
         }
 
         private static int quantize(double value, int scale) {
             return (int) Math.round(value * scale);
-        }
-    }
-
-    private record Basis(Vec3 right, Vec3 up) {
-        static Basis ground() {
-            return new Basis(new Vec3(1, 0, 0), new Vec3(0, 0, 1));
-        }
-
-        static Basis facing(Vec3 normal) {
-            Vec3 safe = normal.lengthSqr() < 0.00001 ? new Vec3(0, 0, 1) : normal.normalize();
-            Vec3 reference = Math.abs(safe.y) > 0.92 ? new Vec3(1, 0, 0) : new Vec3(0, 1, 0);
-            Vec3 right = safe.cross(reference).normalize();
-            Vec3 up = right.cross(safe).normalize();
-            return new Basis(right, up);
-        }
-
-        Vec3 point(double angle, double radius) {
-            return right.scale(Math.cos(angle) * radius).add(up.scale(Math.sin(angle) * radius));
         }
     }
 }
